--- a/index.html
+++ b/index.html
@@ -29,22 +29,15 @@
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
         <div class="story">
-          <p class="text-center">郊外にある、歴史も古い中学校・・・<br>
-            いつの間にか、放課後に図工室から奇妙な叫び声が聞こえてくるという噂が流れ始めた。<br>
-            調査したが、噂の出どころはわからない。ああああ<br>
-            そんな矢先、某有名預言者ノストラエヌスが、「このままだと図工室が原因で、世界が滅びるだろう」と予言。<br>
+          <p class="text-center">あなたの親しい友人が好きな、話題のVR交流ゲーム「ConnecT」。<br>
+            最近、PC版が配信され、あなたも「ConnecT」で遊べるようになった。<br>
+            ConnecTで遊んでいたあなたと友人。しかし、突然友人のアバターの様子が…？<br>
+            ……どうやら、友人のVR機器が故障し、そのショックで友人の自我がConnecTの<br>
             生徒に人気のS先生が一人で調査に入ったが、いつまでも帰ってこない。<br>
-            不思議に思った生徒会長の君は、副会長の伊計島太郎と茨つくはの<br>
-            ２名を連れて家庭科室の前に来たが、ドアが開かな…………ァ……………<br>
-            さらにドアの前に画面とキーボードが。どうやら暗号を入力しろということらしい。</p>
-          <div class="story__note__outer bg-color--gray">
-            <ul class="story__note">
-              <li>今、これを読んだ生徒会メンバー以外を呼んではいけない</li>
-              <li>60分を超えるとS先生は出てこられない</li>
-            </ul>
-          </div>
-          <p class="text-center">いつの間にか、タイマーが起動した。59:58、59:57・・・急がなきゃ。<br>
-            まずはこの暗号を解かなくては！</p>
+            世界に閉じ込められてしまったらしい。<br>
+            頭脳明晰なあなたは、友人を救うために、<br>
+            友人のVR機器へアクセスし、ConnecTの世界へ飛び、<br>
+            友人の自我の脱出の手助けをするのだったーー。</p>
         </div>
       </div>
     </section>
