--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
         <div class="story">
-          <p class="text-center"><font color="red"><font face="ヒラギノ明朝 ProN">あなたの親しい友人が好きな、話題のVR交流ゲーム「ConnecT」。<br>
+          <p class="text-center"><font face="ヒラギノ明朝 ProN">あなたの親しい友人が好きな、話題のVR交流ゲーム「ConnecT」。<br>
             最近、PC版が配信され、あなたも「ConnecT」で遊べるようになった。<br>
             ConnecTで遊んでいたあなたと友人。しかし、突然友人のアバターの様子が…？<br>
             ……どうやら、友人のVR機器が故障し、そのショックで友人の自我がConnecTの<br>
@@ -37,7 +37,7 @@
             世界に閉じ込められてしまったらしい。<br>
             頭脳明晰なあなたは、友人を救うために、<br>
             友人のVR機器へアクセスし、ConnecTの世界へ飛び、<br>
-            友人の自我の脱出の手助けをするのだったーー。</p></font></font>
+            友人の自我の脱出の手助けをするのだったーー。</p></font>
         </div>
       </div>
     </section>
