--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12.47 24.94" id="arrow" class="arrow_svg">
       <title>arrow</title>
       <polygon points="0 24.94 0 19.66 7.35 12.47 0 5.92 0 0 12.47 12.47 0 24.94"/>
+        <body bgcolor="black">
     </symbol>
   </svg>
   <header class="header">
@@ -29,7 +30,7 @@
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
         <div class="story">
-          <p class="text-center"><font face="ヒラギノ明朝 ProN">あなたの親しい友人が好きな、話題のVR交流ゲーム「ConnecT」。<br>
+          <p class="text-center"><font color="white"><font face="ヒラギノ明朝 ProN">あなたの親しい友人が好きな、話題のVR交流ゲーム「ConnecT」。<br>
             最近、PC版が配信され、あなたも「ConnecT」で遊べるようになった。<br>
             ConnecTで遊んでいたあなたと友人。しかし、突然友人のアバターの様子が…？<br>
             ……どうやら、友人のVR機器が故障し、そのショックで友人の自我がConnecTの<br>
@@ -37,7 +38,7 @@
             世界に閉じ込められてしまったらしい。<br>
             頭脳明晰なあなたは、友人を救うために、<br>
             友人のVR機器へアクセスし、ConnecTの世界へ飛び、<br>
-            友人の自我の脱出の手助けをするのだったーー。</p></font>
+            友人の自我の脱出の手助けをするのだったーー。</p></font></font>
         </div>
       </div>
     </section>
