--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <br>
             頭脳明晰なあなたは、友人を救うために、<br>
             友人のVR機器へアクセスし、ConnecTの世界へ飛び、<br>
-            友人の自我の脱出の手助けをするのだったーー。</p></font></font>
+            友人の自我の脱出の手助けをするのだった－－。</p></font></font>
         </div>
       </div>
     </section>
