--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
         <div class="story">
-          <p class="text-center"><font color="white"><font face="ヒラギノ明朝 ProN">あなたの親しい友人が好きな、話題のVR交流ゲーム「ConnecT」。<br>
-            最近、PC版が配信され、あなたも「ConnecT」で遊べるようになった。<br>
-            ConnecTで遊んでいたあなたと友人。しかし、突然友人のアバターの様子が…？<br>
+          <p class="text-center"><font color="white"><font face="ヒラギノ明朝 ProN">VR機器をはじめ、スマートフォンやパソコンなどにも対応したVR交流ゲーム「ConnecT」。<br>
+            あなたはPCを使って、あなたの友人とConnecTで遊んでいた…。<br>
             <br>
-            ……どうやら、友人のVR機器が故障し、そのショックで友人の自我がConnecTの<br>
-            生徒に人気のS先生が一人で調査に入ったが、いつまでも帰ってこない。<br>
-            世界に閉じ込められてしまったらしい。<br>
+            しかし、突然友人のアバターの挙動がおかしくなったかと思うと……<br>
+            次の瞬間、友人の魂が、VR世界の友人のアバターの中に閉じ込められてしまった！<br>
             <br>
-            頭脳明晰なあなたは、友人を救うために、<br>
-            友人のVR機器へアクセスし、ConnecTの世界へ飛び、<br>
-            友人の自我の脱出の手助けをするのだった－－。</p></font></font>
+            友人曰く、<br>
+            「VR機器は突然故障してしまい漏電しているため、<br>
+            確実に内部から電源を切らないとVR世界から脱出することはできない」とのことーー。<br>
+            <br>
+            あなたの賢い頭脳で謎を解き、友人をVR世界から脱出させよう！！</p></font></font>
         </div>
       </div>
     </section>
