--- a/main.html
+++ b/main.html
@@ -37,7 +37,8 @@
             <p class="text-center">まずは友人のVR機器にアクセスしよう！<br>
              友人のVR機器にはパスワードによるセキュリティが仕掛けられている。<br>
             友人のプロフィールにある色がついたIDを頼りに、パスワードを紐解き、入力しよう！</p>
-            <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
+            <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。<br>
+            ※回答はひらがなでお願いします。</p>
   
             <div class="container">
               <figure class="image__container">
