--- a/main.html
+++ b/main.html
@@ -34,8 +34,10 @@
         <section class="section">
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>さぁゲームを始めよう！</h2>
-            <p class="text-center">まずは友人のVR機器にアクセスしよう！<br>
-             友人のVR機器にはパスワードによるセキュリティが仕掛けられている。<br>
+            <p class="text-center">STEP.1 まずは友人のVR機器にアクセスしよう！<br>
+            <br>
+            <p class="text-center">STEP.1 まずは友人のVR機器にアクセスしよう！<br
+            友人のVR機器にはパスワードによるセキュリティが仕掛けられている。<br>
             友人のプロフィールにある色がついたIDを頼りに、パスワードを紐解き、入力しよう！</p>
             <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。<br>
             ※回答はひらがなでお願いします。</p>
@@ -87,9 +89,8 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：１  クリア！</div>
-              <div class="clear-message__content">家庭科室の扉が開いた！<br>
-                さぁ先生を助けるため<br>
-                ３つステージの謎をとき、暗号を見つけ出そう！</div>
+              <div class="clear-message__content">パスワードを解くことができた！<br>
+                さぁ、友人を探そう！</div>
               <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
@@ -109,9 +110,11 @@ Youtube貼り付けここまで -->
           <div class="section">
             <div class="container">
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>黒板に書かれている謎を解け！</h2>
-              <p class="text-center">家庭科室に入ることができた！<br>
-                すぐに目に入ったのは黒板にある４つの謎。<br>
-                これらを解くことで、きっと次のステップに繋がるはずだ！</p>
+              <p class="text-center">STEP.2 友人の位置を特定しよう！<br>
+                <br>
+                VR世界のどの位置に友人がいるのかの情報は、謎の記号からしか入手できなかったーー。<br>
+                でも、この記号を読み解けば友人の位置を特定できるかもしれない！<br>
+                アバターの居場所を特定し、友人に接近しよう！</p>
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
@@ -183,8 +186,8 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：2　クリア！</div>
-              <div class="clear-message__content">黒板の指示に従い、<br>
-                次のステージの謎を解こう！</div>
+              <div class="clear-message__content">友人を見つけることに成功した！<br>
+                さぁ、このまま脱出しよう！</div>
                 <button v-on:click="nextStage('stage2')" onclick="location.href='#sectionStage3'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
@@ -200,9 +203,14 @@ Youtube貼り付けここまで -->
         <section class="section">
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>家庭科室の課題とは</h2>
-            <p class="text-center">黒板から得たメッセージは、「食物の廃棄問題」だった。<br>
-              どうやら、廃棄にかかる費用がかかりすぎて小学校の運営が厳しくなったようだ。。<br>
-              これらを解決するための最後の謎を解いていこう！</p>
+            <p class="text-center">STEP.3 VR世界から脱出しよう！<br>
+              <br>
+              脱出しようとしたら、ConnecTのセキュリティロボットが現れた。<br>
+              「コノ先ヘ進ムニハ権限ガ必要デス」<br>
+              あなたも友人も権限を持っておらず、出口を通ることができない…！<br>
+              <br>
+              しかし、どうしてもここを通りたいのならばとロボットが謎を仕掛けてきた！<br>
+              謎を解いて、二人でVR世界を脱出しよう！！</p>
             <figure class="image__container">
               <img src="assets/images/stage.png" alt="">
             </figure>
