--- a/main.html
+++ b/main.html
@@ -33,11 +33,8 @@
         <!-- STAGE1問題セクション　ここから -->
         <section class="section">
           <div class="container">
-            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>さぁゲームを始めよう！</h2>
-            <p class="text-center">STEP.1 まずは友人のVR機器にアクセスしよう！<br>
-            <br>
-            <p class="text-center">STEP.1 まずは友人のVR機器にアクセスしよう！<br
-            友人のVR機器にはパスワードによるセキュリティが仕掛けられている。<br>
+            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>まずは友人のVR機器にアクセスしよう！</h2>
+            <p class="text-center">友人のVR機器にはパスワードによるセキュリティが仕掛けられている。<br>
             友人のプロフィールにある色がついたIDを頼りに、パスワードを紐解き、入力しよう！</p>
             <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。<br>
             ※回答はひらがなでお願いします。</p>
@@ -109,10 +106,8 @@ Youtube貼り付けここまで -->
         <section>
           <div class="section">
             <div class="container">
-              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>黒板に書かれている謎を解け！</h2>
-              <p class="text-center">STEP.2 友人の位置を特定しよう！<br>
-                <br>
-                VR世界のどの位置に友人がいるのかの情報は、謎の記号からしか入手できなかったーー。<br>
+              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>友人の位置を特定しよう！</h2>
+              <p class="text-center">VR世界のどの位置に友人がいるのかの情報は、謎の記号からしか入手できなかったーー。<br>
                 でも、この記号を読み解けば友人の位置を特定できるかもしれない！<br>
                 アバターの居場所を特定し、友人に接近しよう！</p>
             </div>
@@ -202,10 +197,8 @@ Youtube貼り付けここまで -->
         <!-- STAGE3-1問題セクション　ここから -->
         <section class="section">
           <div class="container">
-            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>家庭科室の課題とは</h2>
-            <p class="text-center">STEP.3 VR世界から脱出しよう！<br>
-              <br>
-              脱出しようとしたら、ConnecTのセキュリティロボットが現れた。<br>
+            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>VR世界から脱出しよう！</h2>
+            <p class="text-center">脱出しようとしたら、ConnecTのセキュリティロボットが現れた。<br>
               「コノ先ヘ進ムニハ権限ガ必要デス」<br>
               あなたも友人も権限を持っておらず、出口を通ることができない…！<br>
               <br>
