--- a/index.html
+++ b/index.html
@@ -29,20 +29,18 @@
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
         <div class="story">
-          <p class="text-center">郊外にある、歴史も古い小学校・・・<br>
-            いつの間にか、放課後に家庭科室から奇妙な叫び声が聞こえてくるという噂が流れ始めた。<br>
-            調査したが、噂の出どころはわからない。<br>
-            そんな矢先、某有名預言者ノストラエヌスが、「このままだと家庭科室が原因で、学校が滅びるだろう」と予言。<br>
-            生徒に人気のS先生が一人で調査に入ったが、いつまでも帰ってこない。<br>
-            不思議に思った生徒会長の君は、副会長の伊計島太郎と茨つくはの<br>
-            ２名を連れて家庭科室の前に来たが、ドアが開かない。<br>
-            さらにドアの前に画面とキーボードが。どうやら暗号を入力しろということらしい。</p>
-          <div class="story__note__outer bg-color--gray">
-            <ul class="story__note">
-              <li>今、これを読んだ生徒会メンバー以外を呼んではいけない</li>
-              <li>30分を超えるとS先生は出てこられない</li>
-            </ul>
-          </div>
+         <body bgcolor="black"><p class="text-center"><font color="white"><font face="ヒラギノ明朝 ProN">郊外にある、歴史も古い小学校・・・<br>
+          VR機器をはじめ、スマートフォンやパソコンなどにも対応したVR交流ゲーム「ConnecT」。<br>
+          あなたはPCを使って、あなたの友人とConnecTで遊んでいた…。<br>
+          <br>
+          しかし、突然友人のアバターの挙動がおかしくなったかと思うと……<br>
+          次の瞬間、友人の魂が、VR世界の友人のアバターの中に閉じ込められてしまった！<br>
+          <br>
+          友人曰く、<br>
+          「VR機器は突然故障してしまい漏電しているため、<br>
+          確実に内部から電源を切らないとVR世界から脱出することはできない」とのことーー。<br>
+          あなたの賢い頭脳で謎を解き、友人をVR世界から脱出させよう！！</p></font></font>
+           </div>
           <p class="text-center">いつの間にか、タイマーが起動した。29:58、29:57・・・急がなきゃ。<br>
             まずはこの暗号を解かなくては！</p>
         </div>
