--- a/main.html
+++ b/main.html
@@ -34,8 +34,8 @@
         <section class="section">
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>まずは友人のVR機器にアクセスしよう！</h2>
-            <p class="text-center">友人のVR機器にはパスワードによるセキュリティが仕掛けられている。<br>
-              友人のプロフィールにある色がついたIDを頼りに、パスワードを紐解き、入力しよう！</p>  
+            <p class="text-center"><font face="ヒラギノ明朝 ProN">友人のVR機器にはパスワードによるセキュリティが仕掛けられている。<br>
+              友人のプロフィールにある色がついたIDを頼りに、パスワードを紐解き、入力しよう！</p></font>
             <div class="container">
               <figure class="image__container">
                 <img src="assets/images/stage.png" alt="">
@@ -104,9 +104,9 @@ Youtube貼り付けここまで -->
           <div class="section">
             <div class="container">
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>友人の位置を特定しよう！</h2>
-              <p class="text-center">VR世界のどの位置に友人がいるのかの情報は、謎の記号からしか入手できなかったーー。<br>
+              <p class="text-center"><font face="ヒラギノ明朝 ProN">VR世界のどの位置に友人がいるのかの情報は、謎の記号からしか入手できなかったーー。<br>
                 でも、この記号を読み解けば友人の位置を特定できるかもしれない！<br>
-                アバターの居場所を特定し、友人に接近しよう！</p>
+                アバターの居場所を特定し、友人に接近しよう！</p></font>
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
@@ -186,11 +186,11 @@ Youtube貼り付けここまで -->
         <section class="section">
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>VR世界から脱出しよう！</h2>
-            <p class="text-center">友人とともに脱出しようとしたら、ConnecTのセキュリティロボットが現れた。<br>
+            <p class="text-center"><font face="ヒラギノ明朝 ProN">友人とともに脱出しようとしたら、ConnecTのセキュリティロボットが現れた。<br>
               「コノ先ヘ進ムニハ権限ガ必要デス」<br>
               しかしあなたも友人も権限を持っておらず、出口を通ることができない…！<br>
               しかし、どうしてもここを通りたいのならばとロボットが謎を仕掛けてきた！<br>
-              謎を解いて、二人でVR世界を脱出しよう！！</p>
+              謎を解いて、二人でVR世界を脱出しよう！！</p></font>
             <figure class="image__container">
               <img src="assets/images/stage.png" alt="">
             </figure>
