--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
               友人のプロフィールにある色がついたIDを頼りに、パスワードを紐解き、入力しよう！</p></font>
             <div class="container">
               <figure class="image__container">
-                <img src="assets/images/stage.png" alt="">
+                <img src="assets/images/Q1.png" alt="">
               </figure>
                 
  <!--  YouTube貼り付け
@@ -127,7 +127,7 @@ Youtube貼り付けここまで -->
                 <div class="column">
                   <!-- STAGE2-1問題セクション　ここから -->
                   <figure class="image__container">
-                    <img src="assets/images/stage.png" alt="">
+                    <img src="assets/images/Q2.png" alt="">
                   </figure>
                   <!-- STAGE2-1問題セクション　ここまで -->
                   <!-- STAGE2-1解答入力セクション　ここから -->
@@ -192,7 +192,7 @@ Youtube貼り付けここまで -->
               しかし、どうしてもここを通りたいのならばとロボットが謎を仕掛けてきた！<br>
               謎を解いて、二人でVR世界を脱出しよう！！</p></font>
             <figure class="image__container">
-              <img src="assets/images/stage.png" alt="">
+              <img src="assets/images/Q3.png" alt="">
             </figure>
           </div>
         </section>
