--- a/main.html
+++ b/main.html
@@ -106,7 +106,8 @@ Youtube貼り付けここまで -->
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>友人の位置を特定しよう！</h2>
               <p class="text-center"><font face="ヒラギノ明朝 ProN">VR世界のどの位置に友人がいるのかの情報は、謎の記号からしか入手できなかったーー。<br>
                 でも、この記号を読み解けば友人の位置を特定できるかもしれない！<br>
-                アバターの居場所を特定し、友人に接近しよう！</p></font>
+                アバターの居場所を特定し、友人に接近しよう！<br>
+                ※大文字で入力してください。</p></font>
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
