--- a/final.html
+++ b/final.html
@@ -11,20 +11,20 @@
 <body>
   <header class="header">
     <div class="container">
-      <div class="header__logo"><img src="assets/images/logo.svg" alt="チームロゴ"></div>
+      <div class="header__logo"><img src="assets/images/logodayo.png" alt="チームロゴ"></div>
       <div class="header__name">N・S高生制作サイト</div>
     </div>
   </header>
   <main class="main final-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/main-image.png" alt="封鎖された家庭科室からの脱出"></h1>
+    <h1 class="main-title"><img src="assets/images/main-gazou1.png" alt="封鎖された家庭科室からの脱出"></h1>
     <!-- タイトルエリア　ここまで -->
     <section class="section">
       <div class="container">
         <div class="box bg-color--subcolor">
           <h2 class="section-title--border">全ステージ クリア！</h2>
-          <p class="text-center">おめでとう！あなたはついに全ての謎を解き、先生を救うことができた！<br>
-            そして先生からあるメッセージが伝えられた・・・</p>
+          <p class="text-center">おめでとう！あなたはついに全ての謎を解き、友人を救うことができた！<br>
+            そして友人からあるメッセージが伝えられた・・・</p>
         </div>
       </div>
     </section>
@@ -44,10 +44,9 @@ Youtube貼り付けここまで-->
           ß
       </div>
          -->
-        <p class="text-center">あなたはきっと、このメッセージをずっと忘れることはないだろう・・・。<br>
-          これからも家庭科室が封鎖されるようなことがあったら、<br>
-          この教訓をしっかり思い出してくれ。</p>
-        <p class="text-center">それでは、また会おう！</p>
+        <p class="text-center">助けてくれてありがとう（仮）。<br>
+          死ぬかと思った...</p>
+        <p class="text-center">それでは。</p>
       </div>
     </section>
     <section class="section bg-color--keycolor">
@@ -65,8 +64,10 @@ Youtube貼り付けここまで-->
             <div class="card">
               <h3 class="card__title">このゲームの企画者</h3>
               <p class="card__content">企画・制作メンバーの紹介など。<br>
-                テキストテキストテキストテキストテキストテキストテキスト<br>
-                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                Hibiki Kugenuma<br>
+                Fumiya Watanabe<br>
+                Hikaru Sensho<br>
+                Yuto Tomita</p>
             </div>
           </div>
         </div>
