--- a/main.html
+++ b/main.html
@@ -191,7 +191,8 @@ Youtube貼り付けここまで -->
               「コノ先ヘ進ムニハ権限ガ必要デス」<br>
               しかしあなたも友人も権限を持っておらず、出口を通ることができない…！<br>
               しかし、どうしてもここを通りたいのならばとロボットが謎を仕掛けてきた！<br>
-              謎を解いて、二人でVR世界を脱出しよう！！</p></font>
+              謎を解いて、二人でVR世界を脱出しよう！！</br>
+             　　※色の名前で回答してください</p></font>
             <figure class="image__container">
               <img src="assets/images/Q3.png" alt="">
             </figure>
