--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
         <div class="story">
-         <body bgcolor="black"><p class="text-center"><font color="white"><font face="ヒラギノ明朝 ProN">郊外にある、歴史も古い小学校・・・<br>
-          VR機器をはじめ、スマートフォンやパソコンなどにも対応したVR交流ゲーム「ConnecT」。<br>
+         <body bgcolor="black"><p class="text-center"><font color="white"><font face="ヒラギノ明朝 ProN">VR機器をはじめ、スマートフォンやパソコンなどにも対応したVR交流ゲーム「ConnecT」。<br>
           あなたはPCを使って、あなたの友人とConnecTで遊んでいた…。<br>
           <br>
           しかし、突然友人のアバターの挙動がおかしくなったかと思うと……<br>
