--- a/final.html
+++ b/final.html
@@ -63,7 +63,8 @@ Youtube貼り付けここまで-->
           <div class="column">
             <div class="card">
               <h3 class="card__title">このゲームの企画者</h3>
-              <p class="card__content">企画・制作メンバーの紹介など。<br>
+              <p class="card__content">柏キャンパス　5班<br>
+                <br>
                 Hibiki Kugenuma<br>
                 Fumiya Watanabe<br>
                 Hikaru Sensho<br>
