--- a/final.html
+++ b/final.html
@@ -65,10 +65,10 @@ Youtube貼り付けここまで-->
               <h3 class="card__title">このゲームの企画者</h3>
               <p class="card__content">柏キャンパス　5班<br>
                 <br>
-                Hibiki Kugenuma<br>
-                Fumiya Watanabe<br>
-                Hikaru Sensho<br>
-                Yuto Tomita</p>
+                jeRRyGhostFish<br>
+                かふみ<br>
+                へるめっとでざいなぁ<br>
+                勇者ああああ</p>
             </div>
           </div>
         </div>
