--- a/final.html
+++ b/final.html
@@ -44,7 +44,7 @@ Youtube貼り付けここまで-->
           ß
       </div>
          -->
-        <p class="text-center">助けてくれてありがとう（仮）。<br>
+        <p class="text-center">助けてくれてありがとう。<br>
           死ぬかと思った...</p>
         <p class="text-center">それでは。</p>
       </div>
