--- a/hint3.html
+++ b/hint3.html
@@ -42,7 +42,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">テキストテキストテキストテキストテキスト</p>
+              <p class="card__content">メモをとって表にしてみよう</p>
             </div>
               
  <!-- 3-2ヒント追加
@@ -55,7 +55,7 @@
  <!-- 3-3ヒント追加
         　　 <div class="card">
               <h3 class="card__title">3-3ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">メモをとって表にしてみよう</p>
+              <p class="card__content">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
             </div>
 3-3ヒント追加ここまで -->
               
