--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
               友人のプロフィールにある色がついたIDを頼りに、パスワードを紐解き、入力しよう！</p></font>
             <div class="container">
               <figure class="image__container">
-                <img src="assets/images/q1s.png" alt="">
+                <img src="assets/images/1s.png" alt="">
               </figure>
                 
  <!--  YouTube貼り付け
