--- a/hint2.html
+++ b/hint2.html
@@ -42,7 +42,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">後半は数字みたいだな...</p>
+              <p class="card__content">これは本当にバーコードかな？何か文字に見えるような</p>
             </div>
               
  <!-- 2-2ヒント追加
