--- a/main.html
+++ b/main.html
@@ -17,13 +17,13 @@
   </svg>
   <header class="header">
     <div class="container">
-      <div class="header__logo"><img src="assets/images/logodayo.png" alt="チームロゴ"></div>
+      <div class="header__logo"><img src="assets/images/logodesuyo.png" alt="チームロゴ"></div>
       <div class="header__name">N・S高生制作サイト</div>
     </div>
   </header>
   <main class="main main-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/main-gazou1.png" alt="封鎖された家庭科室からの脱出"></h1>
+    <h1 class="main-title"><img src="assets/images/main-gazou1.png" alt="ESC -VR世界から友人を救え-"></h1>
     <!-- タイトルエリア　ここまで -->
     <div id="stage">
 
@@ -106,9 +106,8 @@ Youtube貼り付けここまで -->
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>友人の位置を特定しよう！</h2>
               <p class="text-center"><font face="ヒラギノ明朝 ProN">VR世界のどの位置に友人がいるのかの情報は、謎の記号からしか入手できなかったーー。<br>
                 でも、この記号を読み解けば友人の位置を特定できるかもしれない！<br>
-                アバターの居場所を特定し、友人に接近しよう！<br>
-                ※大文字で入力してください。<br>
-                ※バグ？のため完成してません。すみません</p></font>
+                謎を解いてアバターの"居場所"を特定し、友人に接近しよう！<br>
+                ※ひらがなで入力してください。</p></font>
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
