--- a/hint2.html
+++ b/hint2.html
@@ -17,13 +17,13 @@
   </svg>
   <header class="header">
     <div class="container">
-      <div class="header__logo"><img src="assets/images/logodayo.png" alt="チームロゴ"></div>
+      <div class="header__logo"><img src="assets/images/logodesuyo.png" alt="チームロゴ"></div>
       <div class="header__name">N・S高生制作サイト</div>
     </div>
   </header>
   <main class="main hint-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/main-gazou1.png" alt="封鎖された家庭科室からの脱出"></h1>
+    <h1 class="main-title"><img src="assets/images/main-gazou1.png" alt="ESC -VR世界から友人を救え-"></h1>
     <!-- タイトルエリア　ここまで -->
     <section class="section">
       <div class="container">
