--- a/final.html
+++ b/final.html
@@ -11,7 +11,7 @@
 <body>
   <header class="header">
     <div class="container">
-      <div class="header__logo"><img src="assets/images/logodayo.png" alt="チームロゴ"></div>
+      <div class="header__logo"><img src="assets/images/logodesuyo.png" alt="チームロゴ"></div>
       <div class="header__name">N・S高生制作サイト</div>
     </div>
   </header>
@@ -46,7 +46,6 @@ Youtube貼り付けここまで-->
          -->
         <p class="text-center">助けてくれてありがとう。<br>
           死ぬかと思った...</p>
-        <p class="text-center">それでは。</p>
       </div>
     </section>
     <section class="section bg-color--keycolor">
