--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </header>
   <main class="main index-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/top-gazou.png" alt="Presented by SCRAP×N・S高リアル脱出ゲーム制作PJ ESC -VR世界から友人を救え-"></h1>
+    <h1 class="main-title"><img src="assets/images/top-gazou2.png" alt="Presented by SCRAP×N・S高リアル脱出ゲーム制作PJ ESC -VR世界から友人を救え-"></h1>
     <!-- タイトルエリア　ここまで -->
     <section class="section section--story">
       <div class="container">
