--- a/main.html
+++ b/main.html
@@ -107,7 +107,7 @@ Youtube貼り付けここまで -->
               <p class="text-center"><font face="ヒラギノ明朝 ProN">VR世界のどの位置に友人がいるのかの情報は、謎の記号からしか入手できなかったーー。<br>
                 でも、この記号を読み解けば友人の位置を特定できるかもしれない！<br>
                 謎を解いてアバターの"居場所"を特定し、友人に接近しよう！<br>
-                ※ひらがなで入力してください。</p></font>
+                ※大文字で入力してください。</p></font>
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
